# flux

./: .gitignore  README.md  config.py  model_manager.py  pyproject.toml  requirements.txt  service.py  test_flux.py  utils.py  utils_service.py
flux-base/: README.md  app.py  main.py
flux-inpaint/: readme.md
flux_base/: app.py  flux_generate.py  flux_words_lora.py
flux_canny/: app.py  app_api.py  flux_canny.py
flux_inpaint/: controlnet_flux.py  flux_inpaint.py  pipeline_flux_controlnet_inpaint.py  readme.md  transformer_flux.py
flux_lora/: canny_lora.py  comfy_inf.py  comfy_inf_2.py  inference_lora.py
lora_train/: collect_dataset.py  config.py  gpt_api.py  gpt_prompts.py  run_loras.py  train_processes.py
lora_train/dataset_creation/: create_prompt_for_images.py  gpt_api.py  gpt_prompts.py  image_generator.py
lora_train/lora_configs/: styles.yml  styles_a.yml  styles_a_fast.yml  styles_a_rank_16.yml  styles_a_rank_32_lr1_5.yml  styles_a_rank_32_lr2_4.yml  styles_a_rank_32_lr2_5.yml  styles_a_rank_32_lr4_4.yml  styles_a_rank_32_lr5_5.yml  styles_a_rank_4.yml  styles_a_rank_64.yml  styles_a_rank_8.yml  styles_b.yml  styles_c.yml  styles_d.yml  styles_e.yml  styles_e_fast.yml  styles_fast_sergey_dataset.yml  styles_fast_sergey_dataset_2.yml  styles_fast_sergey_dataset_3.yml  styles_fast_sergey_dataset_rank_8_lr5_4.yml  styles_fast_sergey_dataset_rank_8_lr5_4_full.yml  styles_fast_sergey_dataset_rank_8_lr5_5.yml  styles_fast_sergey_dataset_rank_8_lr5_5_full.yml  styles_latest_b.yml  styles_latest_c.yml  styles_latest_d.yml  styles_latest_e.yml
lora_train/notebooks/: change_pic_size.ipynb  compare_diff_loras.ipynb
notebooks/: ask_prompt_gpt.ipynb  words_processing.ipynb
notebooks/prize_words/: generating.ipynb
scripts/: test_req_for_load_models.py
symbols_priority/: check_priority.ipynb  system_prompt.py  test_lora_no_lora.py
symbols_priority/icons_priority/: gpt_api.py  icons_prompt.py  icons_tests.py
trajectory/: animation_process.py  compare_camera_moves.py  demo_fork.py  inference_ultra.py  simple_camera_move.py  test.py
